--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   ],
   "author": "David Ramos",
   "license": "ISC",
+  "dependencies": {
+    "normalize.css": "^8.0.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.10.2",
@@ -40,6 +43,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
+    "svg-url-loader": "^6.0.0",
     "terser-webpack-plugin": "^3.0.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
